--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
     "next": "latest",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.1",
