--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "proxy":"http://localhost:8000",
     "dev": "next dev",
     "start": "next start"
   },
