--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "proxy":"http://localhost:8000",
+    "proxy": "http://localhost:8000",
     "dev": "next dev",
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "mongoose": "^8.0.3",
     "next": "latest",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.1",
