--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
