--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "next": "latest",
