--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.21.1"
   },
   "engines": {
     "node": ">=18"
