--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "styled-components": "^6.1.8"
   },
   "engines": {
     "node": ">=18"
